a get all Identifactions api with status and address feached in the mamper profile get apis are corrected